Changed title to WebSite

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Amrita's Personal Site</title>
+  <title>Amrita's Personal WebSite</title>
 </head>
 <style>
 body {
