added stylesheet,updated coding,contact-me page colors,my hobbies page color, inserted external css link

--- a/Contact-Me.html
+++ b/Contact-Me.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
+
   <body>
     <h4>Contact_details</h4>
     <p>Phone number :  +91 9067854341</p>
@@ -15,7 +17,7 @@
       <input type="text" name="yourName" value=""><br>
       <label>Email:</label>
       <input type="email" name="yourEmail" value=""><br>
-      
+
       <label>Your Message:</label><br>
       <textarea name="yourMessage" rows="8" cols="18"></textarea><br>
       <input type="submit" name="">
