--- a/index.html
+++ b/index.html
@@ -4,20 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Amrita's Personal WebSite</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-<style>
-body {
-  background-color: beige;
-}
-hr{
-
-  border-style: none;
-  border-top-style: dotted;
-  border-color: grey;
-  border-width:5px;
-  width: 5%;
-}
-</style>
 
 <body>
   <table cellspacing="20">
